# A-maze-ing

./: .gitignore  Makefile  README.md  SECURITY.md  a_maze_ing.py  config.txt  e.sh  maze-generator.py  maze_generator.py  parsing.py  pyproject.toml  visual.py
parser/: parsing.py
src/maze_build/: __init__.py  maze_generator.py  parsing.py  visual.py
