[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mazegen"
version = "1.0.0"
description = "A maze generation library"
authors = [
  { name="tigondra", email="tigondra@student.42lyon.fr" },
  { name="mbichet", email="mbichet@student.42lyon.fr" },
]
readme = "README.md"
requires-python = ">=3.8"

[tool.hatch.build.targets.wheel]
packages = ["src/maze_build"]